Prepare js admin folder

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "laravel-elixir-vueify": "^1.0.0",
     "vue": "^2.0.1",
+    "vuex": "^2.1.1",
     "vue-resource": "^1.0.3"
   }
 }
