--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,9 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
-        Options -MultiViews
+        #Options -MultiViews
     </IfModule>
+
+    Options -Indexes
 
     RewriteEngine On
 
