--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "private": true,
   "scripts": {
     "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "gulp watch",
+    "test": "./node_modules/karma/bin/karma start karma.config.js"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^1.8.1",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
+    "laravel-elixir-vue-loader": "^1.0.1",
+    "laravel-elixir-vueify": "^1.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
-    "laravel-elixir-vueify": "^1.0.0",
+    "phantomjs": "^2.1.7",
     "vue": "^2.0.1",
-    "vuex": "^2.1.1",
-    "vue-resource": "^1.0.3"
+    "vue-cli": "^2.6.0",
+    "vue-resource": "^1.0.3",
+    "vuex": "^2.1.1"
   }
 }
