--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "phantomjs": "^2.1.7",
     "vue": "^2.0.1",
     "vue-cli": "^2.6.0",
-    "vue-resource": "^1.0.3",
+    "vue-resource": "^1.0.3"
   }
 }
