--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "./node_modules/karma/bin/karma start karma.config.js"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "gulp": "^3.9.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
@@ -20,7 +21,7 @@
     "lodash": "^4.16.2",
     "phantomjs": "^2.1.7",
     "vue": "^2.0.1",
-    "vue-cli": "^2.6.0",
-    "vue-resource": "^1.0.3"
+    "vue-axios": "^1.2.2",
+    "vue-cli": "^2.6.0"
   }
 }
