--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon-chai": "^1.2.4",
     "karma-webpack": "^1.8.1",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
@@ -19,6 +21,7 @@
     "laravel-elixir-vueify": "^1.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "mocha": "^3.2.0",
     "phantomjs": "^2.1.7",
     "vue": "^2.0.1",
     "vue-axios": "^1.2.2",
